fixed thread communication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Chuck Norris Jokes</string>
     <string name="start_countdown">Start countdown</string>
+    <string name="chuck_norris_jokes">Chuck Norris Jokes</string>
+    <string name="pause">Pause</string>
+    <string name="resume">Resume</string>
 </resources>
